# tms_final_project

./: .gitignore  BasePage.py  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
locators/: cart_page_locators.py  complete_page_locators.py  confirm_page_locators.py  login_page_locators.py  overview_page_locators.py  product_page_locators.py
pages/: cart_page.py  complete_page.py  confirm_page.py  login_page.py  overview_page.py  product_page.py
tests/api_tests/: api_urls.py  headers.py  test_api.py  tests_api.py
tests/ui_tests/: test_portal.py
