[tool.poetry]
name = "tms_diploma_project"
version = "0.1.0"
description = ""
authors = ["Alexey Yakovtsov <hannisolo@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.4"
selenium = "^3.141.0"
requests = "^2.25.1"
webdriver-manager = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
